# classic-sql-tools

./: LICENSE  README.md  pyproject.toml
sources/classic/sql_tools/: __init__.py  mapper.py  query.py  result.py  types.py
sources/classic/sql_tools/templates/: renderer.py
tests/: conftest.py  test_example.py  test_mapping.py  test_module.py
tests/sql/example/: ddl.sql  get_all.sql  joined_get_by_name.sql  save_task.sql  save_task_statuses.sql
tests/sql/tasks/: ddl.sql  find_by_name.sql  insert_many.sql  save.sql
