[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'classic-sql-tools'
version = '0.0.1'
license = {file = 'LICENSE.txt'}
keywords = ['Jinja2', 'SQL', 'Python', 'Template']
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3 :: Only',
]
requires-python = '>=3.10'
dependencies = [
    'Jinja2~=3.1',
]
[project.optional-dependencies]
dev = [
    'pytest==6.2.5',
    'psycopg==3.2.1',
    'psycopg2-binary==2.9.10'
]
[tool.setuptools.packages.find]
where = ['sources']
namespaces = true
